--- a/Churn-EDA.ipynb
+++ b/Churn-EDA.ipynb
@@ -1436,18 +1436,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 291,
    "id": "51c4a1b5-6252-442c-b714-dabd09d85276",
    "metadata": {},
    "outputs": [],
    "source": [
-    "string = 'ADEB143342LGR2'\n",
+    "string = 'ABH143342LGR2'\n",
     "digit_num = [letter for letter in string if letter.isdigit()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 292,
    "id": "6395cf91-2ba4-489e-8d0b-350bf5b27ddd",
    "metadata": {},
    "outputs": [
@@ -1471,46 +1471,6 @@
     "        break\n",
     "    data_num += letter\n",
     "print(data_name+data_num)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d406ab19-41e8-40a2-8889-d7950d66e7b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A İlk\n",
-      "A slice\n",
-      "A1 int\n",
-      "A12 int\n",
-      "A12L İlk\n",
-      "L slice\n",
-      "A12LG İlk\n",
-      "G slice\n",
-      "A12LGR İlk\n",
-      "R slice\n",
-      "A12LGR2 int\n"
-     ]
-    }
-   ],
-   "source": [
-    "algorithm_name = ''\n",
-    "for letter in string:\n",
-    "    if not letter.isdigit():\n",
-    "        algorithm_name += letter\n",
-    "        print(algorithm_name, 'İlk')\n",
-    "        print(algorithm_name[-1], 'slice')\n",
-    "        if algorithm_name[-1].isdigit():\n",
-    "            algorithm_name = algorithm_name[:-1]\n",
-    "            print(algorithm_name, 'Break öncesi')\n",
-    "            break\n",
-    "    if letter.isdigit():\n",
-    "        algorithm_name += letter\n",
-    "        print(algorithm_name, 'int')"
    ]
   },
   {
