--- a/NNClass.ipynb
+++ b/NNClass.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "d8c2d6d1-a627-465f-9576-5faa837d9645",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "id": "72d48341-4a86-46cb-99c7-4b50ffbc379f",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "id": "1024c840-8257-4ba5-9c45-6dca27b844bc",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "id": "a9f3d247-5385-493d-b2a9-514f2ea320c2",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "id": "b6852a2f-c429-4c1c-bc57-9026edcd8a83",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "id": "f68163c2-ff58-484b-b513-19bc2b0eb188",
    "metadata": {},
    "outputs": [
@@ -154,96 +154,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reducing dimensions with AE1 for A1\n",
-      "Epoch 1/5\n",
-      "7504/7504 [==============================] - 15s 2ms/step - loss: 0.1188\n",
-      "Epoch 2/5\n",
-      "7504/7504 [==============================] - 14s 2ms/step - loss: 0.1072\n",
-      "Epoch 3/5\n",
-      "7504/7504 [==============================] - 15s 2ms/step - loss: 0.1038\n",
-      "Epoch 4/5\n",
-      "7504/7504 [==============================] - 13s 2ms/step - loss: 0.1031\n",
-      "Epoch 5/5\n",
-      "7504/7504 [==============================] - 12s 2ms/step - loss: 0.1007\n",
       "Training deeplearning model ANN1 for A1\n",
-      "201/201 [==============================] - 1s 2ms/step - loss: 953959424.0000\n",
+      "201/201 [==============================] - 1s 1ms/step - loss: 954264448.0000\n",
       "Training done!\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "build = Build(all_regression_test_dict, dimensionality_reduction=True)\n",
-    "build.build_deeplearning_models(models, 'price')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "f39cfae7-a173-460f-a894-5502a23dc59c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<tf.Variable 'dense_37/kernel:0' shape=(2, 17) dtype=float32, numpy=\n",
-      "array([[-0.2584811 , -0.22220047,  0.85812485,  0.7311056 ,  0.80890757,\n",
-      "        -0.5954686 ,  0.46185723,  0.6543978 ,  0.50458413, -0.5571894 ,\n",
-      "        -0.1013959 , -0.17028646,  0.00515057, -0.42557704, -0.3572872 ,\n",
-      "         0.17640214,  0.81579614],\n",
-      "       [ 0.0522849 ,  0.57347596,  0.6420791 ,  0.39242634,  0.5540956 ,\n",
-      "         0.18357007,  0.34279293,  0.46260065,  0.07916101, -0.24856591,\n",
-      "         0.58970606,  0.33829454, -0.22991472, -0.08869642,  0.03141743,\n",
-      "         0.70742255, -0.31556955]], dtype=float32)>\n",
-      "\n",
-      "<tf.Variable 'dense_37/bias:0' shape=(17,) dtype=float32, numpy=\n",
-      "array([ 0.        ,  0.22718036,  0.38182595,  0.40409502,  0.42017305,\n",
-      "       -0.07543349,  0.41722253,  0.29951724,  0.44403496,  0.        ,\n",
-      "        0.22085142,  0.12361743, -0.05157971,  0.        ,  0.        ,\n",
-      "        0.22307853,  0.37230837], dtype=float32)>\n",
-      "\n",
-      "<tf.Variable 'dense_38/kernel:0' shape=(17, 5) dtype=float32, numpy=\n",
-      "array([[ 0.3293441 ,  0.47013086, -0.02158445,  0.00422162, -0.09926587],\n",
-      "       [ 0.15932202,  0.01970883,  0.32606864, -0.46118492,  0.6282691 ],\n",
-      "       [ 0.13596323,  0.1851722 ,  0.19676906, -0.45855826,  0.5370515 ],\n",
-      "       [-0.2718293 ,  0.12917835, -0.17844692, -0.07822791,  0.44622612],\n",
-      "       [ 0.13008046,  0.9384861 , -0.10850301, -0.38106996,  0.82545286],\n",
-      "       [-0.32018977,  0.03924567, -0.10297528, -0.26824692, -0.24366908],\n",
-      "       [-0.5208184 ,  0.04989661, -0.39033386, -0.0070376 ,  0.72266936],\n",
-      "       [-0.53538865,  0.41703475, -0.1583465 ,  0.22086181,  0.26315537],\n",
-      "       [-0.06286684,  0.6405622 , -0.25385728,  0.33784842,  0.5060683 ],\n",
-      "       [ 0.05450213, -0.36592355,  0.21824145,  0.06592107,  0.194175  ],\n",
-      "       [-0.32211295,  0.5037922 , -0.19113746, -0.17930716,  0.4379481 ],\n",
-      "       [-0.4769311 ,  0.16814838,  0.34800005, -0.25839493,  0.16568711],\n",
-      "       [ 0.40859902,  0.31765252,  0.49869567,  0.12921393, -0.28861013],\n",
-      "       [-0.3492748 ,  0.25466812,  0.02327281,  0.46457636,  0.02750677],\n",
-      "       [-0.1207867 ,  0.08658791,  0.16805494, -0.08428457, -0.03821337],\n",
-      "       [ 0.3635469 ,  0.19556874, -0.10747942, -0.16964579,  0.45889285],\n",
-      "       [ 0.48138955, -0.0716439 ,  0.12557918, -0.2570602 ,  0.7776655 ]],\n",
-      "      dtype=float32)>\n",
-      "\n",
-      "<tf.Variable 'dense_38/bias:0' shape=(5,) dtype=float32, numpy=\n",
-      "array([-0.03617768,  0.4061008 ,  0.        , -0.01366007,  0.42912063],\n",
-      "      dtype=float32)>\n",
-      "\n",
-      "<tf.Variable 'dense_39/kernel:0' shape=(5, 1) dtype=float32, numpy=\n",
-      "array([[-0.69953483],\n",
-      "       [ 0.6256075 ],\n",
-      "       [ 0.08330631],\n",
-      "       [-0.6841055 ],\n",
-      "       [ 0.68931377]], dtype=float32)>\n",
-      "\n",
-      "<tf.Variable 'dense_39/bias:0' shape=(1,) dtype=float32, numpy=array([0.42045236], dtype=float32)>\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# NO INPUT\n",
-    "for layer in all_regression_test_dict['models']['A1ANN1AE1'].weights:\n",
-    "    print(layer)\n",
-    "    print()"
+    "build = Build(all_regression_test_dict, dimensionality_reduction=False)\n",
+    "build.build_deep_learning_models(models, 'price')"
    ]
   },
   {
@@ -339,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "id": "a3a7ad66-d5b8-425d-bff8-4484edcbfd1c",
    "metadata": {},
    "outputs": [
@@ -387,14 +307,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>A1ANN1AE1</th>\n",
-       "      <td>99.972</td>\n",
-       "      <td>99.956</td>\n",
-       "      <td>7411.328</td>\n",
-       "      <td>20714.374</td>\n",
-       "      <td>9.403633e+08</td>\n",
-       "      <td>30665.344</td>\n",
-       "      <td>0.269941</td>\n",
+       "      <th>A1ANN1</th>\n",
+       "      <td>99.955</td>\n",
+       "      <td>99.952</td>\n",
+       "      <td>7408.492</td>\n",
+       "      <td>20714.608</td>\n",
+       "      <td>9.404021e+08</td>\n",
+       "      <td>30665.976</td>\n",
+       "      <td>0.269947</td>\n",
        "      <td>22612.54</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -404,14 +324,14 @@
       "text/plain": [
        "             MEPE     MPE      MEAE        MAE           MSE       RMSE  \\\n",
        "ALGORITHM                                                                 \n",
-       "A1ANN1AE1  99.972  99.956  7411.328  20714.374  9.403633e+08  30665.344   \n",
+       "A1ANN1     99.955  99.952  7408.492  20714.608  9.404021e+08  30665.976   \n",
        "\n",
        "              NRMSE       STD  \n",
        "ALGORITHM                      \n",
-       "A1ANN1AE1  0.269941  22612.54  "
+       "A1ANN1     0.269947  22612.54  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "id": "71bbb94a-9dfe-4cc7-a314-9f63eed4832e",
    "metadata": {},
    "outputs": [
@@ -472,14 +392,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>A1ANN1AE1</th>\n",
-       "      <td>99.799</td>\n",
-       "      <td>99.738</td>\n",
-       "      <td>7397.419</td>\n",
-       "      <td>20701.132</td>\n",
-       "      <td>9.398984e+08</td>\n",
-       "      <td>30657.763</td>\n",
-       "      <td>0.269875</td>\n",
+       "      <th>A1ANN1</th>\n",
+       "      <td>99.955</td>\n",
+       "      <td>99.952</td>\n",
+       "      <td>7408.492</td>\n",
+       "      <td>20714.608</td>\n",
+       "      <td>9.404021e+08</td>\n",
+       "      <td>30665.976</td>\n",
+       "      <td>0.269947</td>\n",
        "      <td>22612.54</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -489,14 +409,14 @@
       "text/plain": [
        "             MEPE     MPE      MEAE        MAE           MSE       RMSE  \\\n",
        "ALGORITHM                                                                 \n",
-       "A1ANN1AE1  99.799  99.738  7397.419  20701.132  9.398984e+08  30657.763   \n",
+       "A1ANN1     99.955  99.952  7408.492  20714.608  9.404021e+08  30665.976   \n",
        "\n",
        "              NRMSE       STD  \n",
        "ALGORITHM                      \n",
-       "A1ANN1AE1  0.269875  22612.54  "
+       "A1ANN1     0.269947  22612.54  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
