--- a/NNClass.ipynb
+++ b/NNClass.ipynb
@@ -147,6 +147,43 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "09e71f26-2b4a-4f2a-b1d7-0ab21e9c9a33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'model': 'ANN1',\n",
+       "  'layers': [<keras.layers.core.dense.Dense at 0x2400ed35640>,\n",
+       "   <keras.layers.core.dense.Dense at 0x2400012b6d0>,\n",
+       "   <keras.layers.core.dense.Dense at 0x2400012bcd0>],\n",
+       "  'compile_parameters': {'optimizer': <keras.optimizer_v2.rmsprop.RMSprop at 0x2400f4c0a00>,\n",
+       "   'loss': 'mse'},\n",
+       "  'fit_parameters': {'batch_size': 1200}},\n",
+       " {'feature_selection': ['SFM1', {}],\n",
+       "  'dimensionality_reduction': ['AE1',\n",
+       "   {'encoder_layers': [<keras.layers.core.dense.Dense at 0x2400f4be7c0>,\n",
+       "     <keras.layers.core.dense.Dense at 0x2400f4be880>,\n",
+       "     <keras.layers.core.dense.Dense at 0x2400f4be5b0>],\n",
+       "    'decoder_layers': [<keras.layers.core.dense.Dense at 0x240000effa0>,\n",
+       "     <keras.layers.core.dense.Dense at 0x2400ed352b0>,\n",
+       "     <keras.layers.core.dense.Dense at 0x2400f4c0040>],\n",
+       "    'compile_parameters': {'optimizer': <keras.optimizer_v2.adam.Adam at 0x2400f4c0d60>,\n",
+       "     'loss': 'mse'}}]}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "f68163c2-ff58-484b-b513-19bc2b0eb188",
    "metadata": {},
    "outputs": [
@@ -155,7 +192,7 @@
      "output_type": "stream",
      "text": [
       "Training deeplearning model ANN1 for A1\n",
-      "201/201 [==============================] - 1s 1ms/step - loss: 954264448.0000\n",
+      "201/201 [==============================] - 1s 1ms/step - loss: 954176704.0000\n",
       "Training done!\n",
       "\n"
      ]
@@ -308,13 +345,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A1ANN1</th>\n",
-       "      <td>99.955</td>\n",
-       "      <td>99.952</td>\n",
-       "      <td>7408.492</td>\n",
-       "      <td>20714.608</td>\n",
-       "      <td>9.404021e+08</td>\n",
-       "      <td>30665.976</td>\n",
-       "      <td>0.269947</td>\n",
+       "      <td>99.888</td>\n",
+       "      <td>99.881</td>\n",
+       "      <td>7402.455</td>\n",
+       "      <td>20709.064</td>\n",
+       "      <td>9.401313e+08</td>\n",
+       "      <td>30661.561</td>\n",
+       "      <td>0.269908</td>\n",
        "      <td>22612.54</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -324,11 +361,11 @@
       "text/plain": [
        "             MEPE     MPE      MEAE        MAE           MSE       RMSE  \\\n",
        "ALGORITHM                                                                 \n",
-       "A1ANN1     99.955  99.952  7408.492  20714.608  9.404021e+08  30665.976   \n",
+       "A1ANN1     99.888  99.881  7402.455  20709.064  9.401313e+08  30661.561   \n",
        "\n",
        "              NRMSE       STD  \n",
        "ALGORITHM                      \n",
-       "A1ANN1     0.269947  22612.54  "
+       "A1ANN1     0.269908  22612.54  "
       ]
      },
      "execution_count": 10,
@@ -393,13 +430,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A1ANN1</th>\n",
-       "      <td>99.955</td>\n",
-       "      <td>99.952</td>\n",
-       "      <td>7408.492</td>\n",
-       "      <td>20714.608</td>\n",
-       "      <td>9.404021e+08</td>\n",
-       "      <td>30665.976</td>\n",
-       "      <td>0.269947</td>\n",
+       "      <td>99.888</td>\n",
+       "      <td>99.881</td>\n",
+       "      <td>7402.455</td>\n",
+       "      <td>20709.064</td>\n",
+       "      <td>9.401313e+08</td>\n",
+       "      <td>30661.561</td>\n",
+       "      <td>0.269908</td>\n",
        "      <td>22612.54</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -409,11 +446,11 @@
       "text/plain": [
        "             MEPE     MPE      MEAE        MAE           MSE       RMSE  \\\n",
        "ALGORITHM                                                                 \n",
-       "A1ANN1     99.955  99.952  7408.492  20714.608  9.404021e+08  30665.976   \n",
+       "A1ANN1     99.888  99.881  7402.455  20709.064  9.401313e+08  30661.561   \n",
        "\n",
        "              NRMSE       STD  \n",
        "ALGORITHM                      \n",
-       "A1ANN1     0.269947  22612.54  "
+       "A1ANN1     0.269908  22612.54  "
       ]
      },
      "execution_count": 11,
