--- a/NNClass.ipynb
+++ b/NNClass.ipynb
@@ -5,7 +5,17 @@
    "execution_count": 1,
    "id": "904ea917-ee36-4583-923f-6f6cb9e5e63f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\melis\\anaconda3\\envs\\ml\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Importing plotly failed. Interactive plots will not work.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
@@ -78,7 +88,7 @@
    "outputs": [],
    "source": [
     "layers1 = [\n",
-    "        layers.Dense(17, activation=\"relu\"),\n",
+    "        layers.Dense(17, activation=\"relu\", input_shape = (pd.)),\n",
     "        layers.Dense(5, activation=\"relu\"),\n",
     "        layers.Dense(1),\n",
     "    ]\n",
@@ -113,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1024c840-8257-4ba5-9c45-6dca27b844bc",
    "metadata": {},
    "outputs": [],
@@ -489,9 +499,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DeepLearning",
+   "display_name": "ml",
    "language": "python",
-   "name": "deeplearning"
+   "name": "ml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -503,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
